Multiplier function added

--- a/Colab_Jam.ipynb
+++ b/Colab_Jam.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOi9BXQg+WjXLRsF/uCr5d2",
+      "authorship_tag": "ABX9TyNVSXI8BEq4TG95fP16MlAG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,18 +51,55 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def multiplier(a = 2, b= 5):\n",
+        "  return a*b"
+      ],
       "metadata": {
         "id": "4P8fpD4D-Age"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "c = multiplier()"
+      ],
+      "metadata": {
+        "id": "7RrVQ5K2-C3V"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(c)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7eG7clu2AqVr",
+        "outputId": "18ff448a-ef24-4019-e87f-df90fb7bf7b3"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "7RrVQ5K2-C3V"
+        "id": "g57ARPBsAsLT"
       },
       "execution_count": null,
       "outputs": []
